# go2_robot

./: README.md
HesaiLidar_ROS_2.0/: CMakeLists.txt
HesaiLidar_ROS_2.0/config/: config.yaml
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/UdpParser/src/: udp6_1_parser.cc
HesaiLidar_ROS_2.0/src/manager/: source_driver_ros2.hpp
go2_bringup/: CMakeLists.txt
go2_bringup/launch/: go2.launch.py
go2_bringup/params/: go2_bringup_params.yaml
go2_description/config/champ/: joints.yaml
go2_description/config/ros_control/: ros_control.yaml
go2_description/rviz/: rviz.rviz
go2_description/urdf/: go2_description.urdf  leg.xacro  lidar_4D_lidar.xacro  unitree_go2_gazebo.xacro  unitree_go2_robot.xacro
go2_driver/: CMakeLists.txt  package.xml
go2_driver/include/go2_driver/: go2_driver.hpp
go2_driver/launch/: go2_driver.launch.py
go2_driver/src/go2_driver/: go2_driver.cpp
go2_interfaces/: CMakeLists.txt
go2_robot_sdk/: setup.py
go2_robot_sdk/config/: single_robot_conf.rviz  twist_mux.yaml
go2_robot_sdk/go2_robot_sdk/domain/entities/: robot_config.py
go2_robot_sdk/go2_robot_sdk/infrastructure/ros2/: ros2_publisher.py
go2_robot_sdk/go2_robot_sdk/presentation/: go2_driver_node.py
go2_robot_sdk/launch/: robot.launch.py  webrtc_web.launch.py
hesai_relay/: CMakeLists.txt  package.xml
hesai_relay/src/: hesai_relay.cpp
pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
